style: use 16/9 aspect ratio for blog grid images to prevent stretching

--- a/css/custom.css
+++ b/css/custom.css
@@ -14,7 +14,7 @@
 
 .blog_grid_section img {
     width: 100%;
-    height: 200px;
+    aspect-ratio: 16 / 9;
     object-fit: cover;
 }
 
